--- a/resources/properties/instruction.properties
+++ b/resources/properties/instruction.properties
@@ -5,7 +5,7 @@ student_speech_image=images/speechstudent.png
 student_thought_image=images/thoughtstudents.png
 tutor_thought_image=images/thoughttutor.png
 tutor_text=Formed mostly as the result of volcanic eruptions, Java is the 13th largest island in the world and the fifth largest in Indonesia by landmass. 
-student_text=Good Morning
+student_text=A student or pupil is a learner or someone who attends an educational institution. In Britain, those attending university are termed "students".
 student_thinking=images/student.png
 tutor_thinking=images/tutor.png
 loggingDebug=true
